Tiny fixes for checks
